# olist-models

./: .gitignore  main.py  pyproject.toml
artifacts/: prd_preprocesssor_skl.pkl  prd_processed_columns_skl.pkl  prd_selected_features_skl.pkl
src/: book_sellers.sql  create_abt.sql  create_safra.sql  db_olist_builder.py  exec_abt.py  exec_safra.py  query.sql
src/models-classification/: predict.py  train.py
